terraform/aws_subnet__subnet-10dd9d76.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-10dd9d76:
resource "aws_subnet" "subnet-10dd9d76" {
  assign_ipv6_address_on_creation = false
  availability_zone               = "eu-west-1b"
  cidr_block                      = "172.31.0.0/20"
  map_public_ip_on_launch         = true
  tags = {
    "Name" = "pub-default1"
  }
  vpc_id = aws_vpc.vpc-d16a7cb7.id

  timeouts {}
}
