terraform/aws_subnet__subnet-7faf2225.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-7faf2225:
resource "aws_subnet" "subnet-7faf2225" {
  assign_ipv6_address_on_creation = false
  availability_zone               = "eu-west-1a"
  cidr_block                      = "172.31.32.0/20"
  map_public_ip_on_launch         = true
  tags = {
    "Name" = "pub-default2"
  }
  vpc_id = aws_vpc.vpc-d16a7cb7.id

  timeouts {}
}
