terraform/aws_vpc__vpc-d16a7cb7.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_vpc.vpc-d16a7cb7:
resource "aws_vpc" "vpc-d16a7cb7" {
  assign_generated_ipv6_cidr_block = false
  cidr_block                       = "172.31.0.0/16"
  enable_classiclink               = false
  enable_classiclink_dns_support   = false
  enable_dns_hostnames             = true
  enable_dns_support               = true
  instance_tenancy                 = "default"
  tags = {
    "Name" = "default"
  }
}
